# dscl

./: CMakeLists.txt  IMPLEMENTATION.md  Makefile  README.md  hash.c  hash.h  hashtable.c  hashtable.h  ht_test.c
include/: dscl.h  hashmap.h  simplelib.h
include/dscl/: dictionary.h  hash.h  hashmap.h  tree.h
src/: dictionary.c  hash.c  hashmap.c  tree.c
tests/: benchmark_hashmap.c  test_dictionary.c  test_hash.c  test_hashmap.c  test_tree.c
